compiler/tests/language/negative/oopSurfaceRoleCapability/pack/packBoundViolation.qn
pub badPack(ctx: HttpCtx<i64, string>) -> bool
where
  ...Caps: HttpCapability
{
  return ctx.has<i64>()
}
